<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_margin="6dp"
    android:padding="10dp"
    card_view:cardCornerRadius="15dp"
    card_view:cardElevation="15dp"
    card_view:cardBackgroundColor="#CDE3FA">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cardHeading"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="8dp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:text="@string/card_heading"
                android:textColor="#282727"
                android:textSize="18sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/favIcon"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/favorite_icon"
                android:src="@drawable/baseline_star_outline_24" />
            <ImageView
                android:id="@+id/doneIcon"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/completed_icon"
                android:src="@drawable/baseline_done_24"
                android:visibility="gone" />
            <ImageView
                android:id="@+id/priorityIcon"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="Priority Icon"
                android:src="@drawable/baseline_priority_high_24"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/optionMenu"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/option_menu"
                android:src="@drawable/option_menu"
                card_view:tint="#1B1B1B" />
        </LinearLayout>

        <TextView
            android:id="@+id/cardDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textColor="#282727"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="16sp"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/cardContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/card_content"
            android:textColor="#282727"
            android:textSize="16sp" />
    </LinearLayout>

</androidx.cardview.widget.CardView>
